[package]
name = "pixum"
version = "0.1.0"
authors = ["astral4 <88992929+astral4@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
ahash = { version = "0.8.3", features = ["serde"] }
axum = { version = "0.6.20", features = ["http2"] }
axum-extra = "0.7.7"
bytes = { version = "1.4.0", features = ["serde"] }
deadpool-redis = "0.12.0"
futures = "0.3.28"
mime_guess = "2.0.4"
reqwest = { version = "0.11.20", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.186", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["buffer", "limit", "timeout"] }
tower-http = { version = "0.4.3", features = ["async-compression", "compression-br", "set-header", "util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
