[package]
name = "pixum"
version = "0.1.0"
authors = ["astral4"]
edition = "2021"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
axum = { version = "0.7.5", features = ["http2"] }
axum-extra = "0.9.3"
bytes = { version = "1.6.0", features = ["serde"] }
deadpool-redis = "0.15.0"
futures = "0.3.30"
mime_guess = "2.0.4"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.199", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["buffer", "limit", "timeout"] }
tower-http = { version = "0.5.2", features = ["async-compression", "compression-br", "set-header", "util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
